--- a/src/client/components/about-me/about-me.css
+++ b/src/client/components/about-me/about-me.css
@@ -13,7 +13,8 @@
     background-color: $darker-black;
     > p {
       line-height: 1.87;
-      font-size: 1rem;
+      font-size: 1.1rem;
+      color: rgba($white, 0.65);
     }
   }
 }
